--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=formalizacion
 # Database configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/banquito_prestamos
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate configuration
