actualizacion de dependencias

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,26 @@
-spring.application.name=formalizacion
+spring.application.name=contratos
+server.port=80
 
-# Database configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/banquito_prestamos
+#colocar cadena de conexion a postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/PrestamosAutomotrices
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Hibernate configuration
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+# Desactiva el chequeo de compatibilidad Spring Cloud / Spring Boot
+spring.cloud.compatibility-verifier.enabled=false
 spring.jpa.properties.hibernate.default_schema=formalizacion
 
-# OpenAPI configuration
-springdoc.api-docs.path=/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
-
-# Logging configuration
-logging.level.com.banquito.formalizacion=DEBUG
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+# a nivel global
+logging.level.root=INFO
+# tu paquete
+logging.level.com.originacion.contratos.pagares=DEBUG
+# Silence Spring internals si quieres menos ruido
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=INFO
