Comunicacion con el microservicio originacion

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
+originacion.url=http://localhost:8080
 spring.application.name=formalizacion
-server.port=80
+server.port=8005
 
 #colocar cadena de conexion a postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/PrestamosAutomotrices
